update:增加二维码解析工具类